Covers fix images

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-attachment: scroll;
-  padding: 65px 0;
+  padding: 64px 0;
 }
 
 .visually-hidden {
